--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -141,11 +141,13 @@
   <ItemGroup>
     <ClCompile Include="2.2.1.1.cpp" />
     <ClCompile Include="2.2.1.2.cpp" />
+    <ClCompile Include="2.2.2.1.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h" />
     <ClInclude Include="2.2.1.2.h" />
+    <ClInclude Include="2.2.2.1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
