--- a/Exceptions/Exceptions.vcxproj.filters
+++ b/Exceptions/Exceptions.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="2.2.1.2.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="2.2.2.1.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="2.2.1.2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.2.2.1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
