--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -143,6 +143,9 @@
     <ClCompile Include="2.2.1.2.cpp" />
     <ClCompile Include="2.2.2.1.cpp" />
     <ClCompile Include="2.2.2.2.cpp" />
+    <ClCompile Include="2.2.3.1.cpp" />
+    <ClCompile Include="2.2.3.2.cpp" />
+    <ClCompile Include="2.2.3.3.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +153,9 @@
     <ClInclude Include="2.2.1.2.h" />
     <ClInclude Include="2.2.2.1.h" />
     <ClInclude Include="2.2.2.2.h" />
+    <ClInclude Include="2.2.3.1.h" />
+    <ClInclude Include="2.2.3.2.h" />
+    <ClInclude Include="2.2.3.3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
