--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="2.2.3.1.cpp" />
     <ClCompile Include="2.2.3.2.cpp" />
     <ClCompile Include="2.2.3.3.cpp" />
+    <ClCompile Include="2.2.4.1.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +157,7 @@
     <ClInclude Include="2.2.3.1.h" />
     <ClInclude Include="2.2.3.2.h" />
     <ClInclude Include="2.2.3.3.h" />
+    <ClInclude Include="2.2.4.1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
