--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="2.2.3.2.cpp" />
     <ClCompile Include="2.2.3.3.cpp" />
     <ClCompile Include="2.2.4.1.cpp" />
+    <ClCompile Include="2.2.4.2.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +159,14 @@
     <ClInclude Include="2.2.3.2.h" />
     <ClInclude Include="2.2.3.3.h" />
     <ClInclude Include="2.2.4.1.h" />
+    <ClInclude Include="2.2.4.2.h" />
+    <ClInclude Include="Film.h" />
+    <ClInclude Include="Flight.h" />
+    <ClInclude Include="PhoneContact.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Song.h" />
+    <ClInclude Include="Subject.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
