--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="2.2.3.3.cpp" />
     <ClCompile Include="2.2.4.1.cpp" />
     <ClCompile Include="2.2.4.2.cpp" />
+    <ClCompile Include="2.2.4.3.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +161,7 @@
     <ClInclude Include="2.2.3.3.h" />
     <ClInclude Include="2.2.4.1.h" />
     <ClInclude Include="2.2.4.2.h" />
+    <ClInclude Include="2.2.4.3.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
