--- a/Exceptions/Exceptions.vcxproj.filters
+++ b/Exceptions/Exceptions.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="2.2.4.3.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="2.2.4.4.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="2.2.4.3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.2.4.4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
