--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="2.2.5.1.cpp" />
     <ClCompile Include="2.2.5.2.cpp" />
     <ClCompile Include="2.2.5.3.cpp" />
+    <ClCompile Include="2.2.5.4.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +172,7 @@
     <ClInclude Include="2.2.5.1.h" />
     <ClInclude Include="2.2.5.2.h" />
     <ClInclude Include="2.2.5.3.h" />
+    <ClInclude Include="2.2.5.4.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
