--- a/Exceptions/Exceptions.vcxproj.filters
+++ b/Exceptions/Exceptions.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="2.2.5.4.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="2.2.5.5.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="2.2.5.4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.2.5.5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
