--- a/Exceptions/Exceptions.vcxproj.filters
+++ b/Exceptions/Exceptions.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="2.2.5.5.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="2.5.5.6.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="2.2.5.5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.5.5.6.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
