--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="2.2.5.4.cpp" />
     <ClCompile Include="2.2.5.5.cpp" />
     <ClCompile Include="2.2.6.1.cpp" />
+    <ClCompile Include="2.2.6.2.cpp" />
     <ClCompile Include="2.5.5.6.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -178,6 +179,7 @@
     <ClInclude Include="2.2.5.4.h" />
     <ClInclude Include="2.2.5.5.h" />
     <ClInclude Include="2.2.6.1.h" />
+    <ClInclude Include="2.2.6.2.h" />
     <ClInclude Include="2.5.5.6.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
