--- a/Exceptions/Exceptions.vcxproj.filters
+++ b/Exceptions/Exceptions.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="2.2.6.3.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="2.2.7.1.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2.2.1.1.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="2.2.6.3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.2.7.1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
