--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="2.2.6.1.cpp" />
     <ClCompile Include="2.2.6.2.cpp" />
     <ClCompile Include="2.2.6.3.cpp" />
+    <ClCompile Include="2.2.7.1.cpp" />
     <ClCompile Include="2.5.5.6.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -182,6 +183,7 @@
     <ClInclude Include="2.2.6.1.h" />
     <ClInclude Include="2.2.6.2.h" />
     <ClInclude Include="2.2.6.3.h" />
+    <ClInclude Include="2.2.7.1.h" />
     <ClInclude Include="2.5.5.6.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
