--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="2.2.7.2.cpp" />
     <ClCompile Include="2.2.7.3.cpp" />
     <ClCompile Include="2.2.8.1.cpp" />
+    <ClCompile Include="2.2.8.2.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -191,6 +192,7 @@
     <ClInclude Include="2.2.7.2.h" />
     <ClInclude Include="2.2.7.3.h" />
     <ClInclude Include="2.2.8.1.h" />
+    <ClInclude Include="2.2.8.2.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
