--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="2.2.8.1.cpp" />
     <ClCompile Include="2.2.8.2.cpp" />
     <ClCompile Include="2.2.8.3.cpp" />
+    <ClCompile Include="2.2.8.4.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -195,6 +196,7 @@
     <ClInclude Include="2.2.8.1.h" />
     <ClInclude Include="2.2.8.2.h" />
     <ClInclude Include="2.2.8.3.h" />
+    <ClInclude Include="2.2.8.4.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
