--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="2.2.8.2.cpp" />
     <ClCompile Include="2.2.8.3.cpp" />
     <ClCompile Include="2.2.8.4.cpp" />
+    <ClCompile Include="2.2.8.5.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +198,7 @@
     <ClInclude Include="2.2.8.2.h" />
     <ClInclude Include="2.2.8.3.h" />
     <ClInclude Include="2.2.8.4.h" />
+    <ClInclude Include="2.2.8.5.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
