--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="2.2.8.4.cpp" />
     <ClCompile Include="2.2.8.5.cpp" />
     <ClCompile Include="2.2.8.6.cpp" />
+    <ClCompile Include="2.2.8.7.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +202,7 @@
     <ClInclude Include="2.2.8.4.h" />
     <ClInclude Include="2.2.8.5.h" />
     <ClInclude Include="2.2.8.6.h" />
+    <ClInclude Include="2.2.8.7.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
