--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="2.2.8.5.cpp" />
     <ClCompile Include="2.2.8.6.cpp" />
     <ClCompile Include="2.2.8.7.cpp" />
+    <ClCompile Include="2.2.8.8.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +204,7 @@
     <ClInclude Include="2.2.8.5.h" />
     <ClInclude Include="2.2.8.6.h" />
     <ClInclude Include="2.2.8.7.h" />
+    <ClInclude Include="2.2.8.8.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
