--- a/Exceptions/Exceptions.vcxproj
+++ b/Exceptions/Exceptions.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="2.2.8.6.cpp" />
     <ClCompile Include="2.2.8.7.cpp" />
     <ClCompile Include="2.2.8.8.cpp" />
+    <ClCompile Include="2.2.9.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -205,6 +206,7 @@
     <ClInclude Include="2.2.8.6.h" />
     <ClInclude Include="2.2.8.7.h" />
     <ClInclude Include="2.2.8.8.h" />
+    <ClInclude Include="2.2.9.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="PhoneContact.h" />
