--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -142,11 +142,13 @@
   <ItemGroup>
     <ClInclude Include="3.2.2.h" />
     <ClInclude Include="3.2.3.h" />
+    <ClInclude Include="3.2.4.h" />
     <ClInclude Include="Book.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3.2.2.cpp" />
     <ClCompile Include="3.2.3.cpp" />
+    <ClCompile Include="3.2.4.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
