--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -141,10 +141,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="3.2.h" />
+    <ClInclude Include="3.3.h" />
     <ClInclude Include="Book.h" />
+    <ClInclude Include="Point.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Route.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="3.3.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="3.2.cpp" />
   </ItemGroup>
