--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -143,9 +143,11 @@
     <ClInclude Include="3.2.h" />
     <ClInclude Include="3.3.h" />
     <ClInclude Include="Book.h" />
+    <ClInclude Include="Flight.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Route.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3.3.cpp" />
