--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -142,15 +142,20 @@
   <ItemGroup>
     <ClInclude Include="3.2.h" />
     <ClInclude Include="3.3.h" />
+    <ClInclude Include="3.4.h" />
+    <ClInclude Include="Album.h" />
+    <ClInclude Include="Band.h" />
     <ClInclude Include="Book.h" />
     <ClInclude Include="Flight.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Route.h" />
+    <ClInclude Include="Song.h" />
     <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3.3.cpp" />
+    <ClCompile Include="3.4.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="3.2.cpp" />
   </ItemGroup>
