--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -143,11 +143,17 @@
     <ClInclude Include="AlbumClass.h" />
     <ClInclude Include="BandClass.h" />
     <ClInclude Include="GenreEnum.h" />
+    <ClInclude Include="Ring.h" />
     <ClInclude Include="SongClass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="4.1.cpp" />
     <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LAB3 Classes\LAB3 Classes.vcxproj">
+      <Project>{0a386561-c6ca-4e19-96ee-991d68f21316}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
