Исправил структуру проекта

--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -140,50 +140,50 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="3.2.h" />
-    <ClInclude Include="3.3.h" />
-    <ClInclude Include="3.4.h" />
-    <ClInclude Include="3.5.h" />
-    <ClInclude Include="Album.h" />
-    <ClInclude Include="AlbumClass.h" />
-    <ClInclude Include="Band.h" />
-    <ClInclude Include="BandClass.h" />
-    <ClInclude Include="Book.h" />
-    <ClInclude Include="Flight.h" />
-    <ClInclude Include="FlightClass.h" />
-    <ClInclude Include="GenreEnum.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="PointClass.h" />
-    <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="RectangleClass.h" />
-    <ClInclude Include="Route.h" />
-    <ClInclude Include="Song.h" />
-    <ClInclude Include="SongClass.h" />
-    <ClInclude Include="Time.h" />
-    <ClInclude Include="TimeClass.h" />
+    <ClInclude Include="Header Files\Agregation\3.3.h" />
+    <ClInclude Include="Header Files\Agregation\Flight.h" />
+    <ClInclude Include="Header Files\Agregation\Point.h" />
+    <ClInclude Include="Header Files\Agregation\Rectangle.h" />
+    <ClInclude Include="Header Files\Agregation\Time.h" />
+    <ClInclude Include="Header Files\Classes\3.5.h" />
+    <ClInclude Include="Header Files\Classes\AlbumClass.h" />
+    <ClInclude Include="Header Files\Classes\BandClass.h" />
+    <ClInclude Include="Header Files\Classes\FlightClass.h" />
+    <ClInclude Include="Header Files\Classes\GenreEnum.h" />
+    <ClInclude Include="Header Files\Classes\PointClass.h" />
+    <ClInclude Include="Header Files\Classes\RectangleClass.h" />
+    <ClInclude Include="Header Files\Classes\SongClass.h" />
+    <ClInclude Include="Header Files\Classes\TimeClass.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\3.4.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Album.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Band.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Song.h" />
+    <ClInclude Include="Header Files\StructureArrayFields\3.2.h" />
+    <ClInclude Include="Header Files\StructureArrayFields\Book.h" />
+    <ClInclude Include="Header Files\StructureArrayFields\Route.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="3.3.cpp" />
-    <ClCompile Include="3.4.cpp" />
-    <ClCompile Include="3.5.cpp" />
-    <ClCompile Include="Album.cpp" />
-    <ClCompile Include="AlbumClass.cpp" />
-    <ClCompile Include="Band.cpp" />
-    <ClCompile Include="BandClass.cpp" />
-    <ClCompile Include="Book.cpp" />
-    <ClCompile Include="Flight.cpp" />
-    <ClCompile Include="FlightClass.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="3.2.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="PointClass.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="RectangleClass.cpp" />
-    <ClCompile Include="Route.cpp" />
-    <ClCompile Include="Song.cpp" />
-    <ClCompile Include="SongClass.cpp" />
-    <ClCompile Include="Time.cpp" />
-    <ClCompile Include="TimeClass.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\3.3.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Flight.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Point.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Rectangle.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Time.cpp" />
+    <ClCompile Include="Resource Files\Classes\3.5.cpp" />
+    <ClCompile Include="Resource Files\Classes\AlbumClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\BandClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\FlightClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\PointClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\RectangleClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\SongClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\TimeClass.cpp" />
+    <ClCompile Include="Resource Files\Main.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\3.4.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Album.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Band.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Song.cpp" />
+    <ClCompile Include="Resource Files\StructuresArrayFields\3.2.cpp" />
+    <ClCompile Include="Resource Files\StructuresArrayFields\Book.cpp" />
+    <ClCompile Include="Resource Files\StructuresArrayFields\Route.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
